--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic/angular": "^6.1.9",
+    "install": "^0.13.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
