--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic/angular": "^6.1.9",
+    "date-fns": "^2.29.3",
     "install": "^0.13.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
