--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "4.1.0",
     "@capacitor/core": "4.6.2",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
-    "@codetrix-studio/capacitor-google-auth": "^3.0.2",
+    "@codetrix-studio/capacitor-google-auth": "^3.2.2",
     "@ionic/angular": "^6.1.9",
-    "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/pwa-elements": "3.1.1",
     "date-fns": "^2.29.3",
     "install": "^0.13.0",
     "ionicons": "^6.0.3",
