--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor/android": "4.8.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "4.1.0",
-    "@capacitor/core": "4.6.2",
+    "@capacitor/core": "^4.8.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
@@ -31,6 +32,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage": "^3.0.6",
     "date-fns": "^2.29.3",
+    "firebase": "^9.22.1",
     "install": "^0.13.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
@@ -47,7 +49,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.6.2",
+    "@capacitor/cli": "^4.6.2",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
